--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -8,8 +8,11 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "components/*": ["src/components/*"]
     },
+    "rootDir": "./src",
+    "outDir": "./dist",
 
     /* Bundler mode */
     "moduleResolution": "bundler",
